test/errmsg/desig-too-large.c.expect
---- stdout ----
errmsg/desig-too-large.c:6:17: error: Array index designator 'fifty' evaluated to 50, which is too large for type 'int [2]'.
---- stderr ----
---- exit status ----
Exit 2
